--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 buildscript {
     dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.3'
+
 //        classpath 'com.google.gms:google-services:4.3.14'
     }
 }
