--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.firebase.appdistribution'
@@ -17,6 +18,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -75,6 +77,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //firebase sdks
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.13'
-    implementation 'com.google.firebase:firebase-analytics:21.1.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.0'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+
+
+
 }
