--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,9 @@ dependencies {
 
 
     implementation (Libs.AndroidX.coreKtx)
-//    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation (Libs.AndroidX.appCompat)
+    implementation (Libs.AndroidX.material)
+    implementation (Libs.AndroidX.constraintLayout)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
