--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+import com.androidcicd_test.Libs
+
 buildscript {
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath(Libs.androidGradlePlugin)
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.3'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
