--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,20 +69,19 @@ android {
 
 dependencies {
 
-
+    //Android
     implementation (Libs.AndroidX.coreKtx)
     implementation (Libs.AndroidX.appCompat)
     implementation (Libs.AndroidX.material)
     implementation (Libs.AndroidX.constraintLayout)
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // test libs
+    testImplementation (Libs.JUnit.base)
+    androidTestImplementation (Libs.JUnit.extJUnit)
+    androidTestImplementation (Libs.JUnit.espressoCore)
 
     //firebase sdks
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.0'
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
-
-
+    implementation (Libs.FireBase.crashlytics)
+    implementation (Libs.FireBase.analytics)
 
 }
